--- a/public/index.html
+++ b/public/index.html
@@ -8,26 +8,37 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     </head>
     <body>
+
 		<div class="container-fluid">
+			<h3>Megabus Ticket Finder</h3>
 			<div class="row">
-				<h4>Departing </h4>
-				<select id="departing">
-					<option value="128">Pittsburgh</option>
-					<option value="127">Philadelphia</option>
-					<option value="137">PSU</option>
-				</select>
+				<div class="alert alert-warning" role="alert">
+					<p>This is a really shitty hacked together version of what this will eventually be. But it does work</p>
+				</div>
 			</div>
-			<div class="row">
-				<h4>Returning </h4>
-				<select id="returning">
-					<option value="128">Pittsburgh</option>
-					<option value="127">Philadelphia</option>
-					<option value="137">PSU</option>
-				</select>
+			<div>
+				<div class="form-group">
+				  <label for="departing">Departing</label>
+				  <select class="form-control" id="departing">
+					  <option value="128">Pittsburgh</option>
+					  <option value="127">Philadelphia</option>
+					  <option value="137">PSU</option>
+				  </select>
+				</div>
+				<div class="form-group">
+					<label for="returning">Returning </label>
+					<select class="form-control" id="returning">
+						<option value="128">Pittsburgh</option>
+						<option value="127" selected>Philadelphia</option>
+						<option value="137">PSU</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<button class="btn btn-primary" onclick="getTickets()">Go</button>
+				</div>
+
 			</div>
-			<div class="row">
-				<button onclick="getTickets()">Go</button>
-			</div>
+
 		</div>
 
 		<div id="results">
@@ -54,7 +65,7 @@
 			 document.getElementById("results").innerHTML = "Loading ..."
 		   console.log('Inside the onreadystatechange event with readyState:');
 		 };
-		 oReq.open('GET', `/api/tickets?originId=${departingId}&destinationId=${returningId}`, true);
+		 oReq.open('GET', "/api/tickets?originId=" + departingId + "&destinationId=" + returningId, true);
 		 oReq.send();
 	}
 	</script>
