dumb smal bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 				<div class="form-group">
 				  <label for="departing">Departing</label>
 				  <select class="form-control" id="departing">
-					  <option value="128">Pittsburgh</option>
+					  <option value="128" selected>Pittsburgh</option>
 					  <option value="127">Philadelphia</option>
 					  <option value="137">PSU</option>
 				  </select>
