Adding NY for Shawn off my phone

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 					  <option value="128" selected>Pittsburgh</option>
 					  <option value="127">Philadelphia</option>
 					  <option value="137">PSU</option>
+					  <option value="123">New York</option>
 				  </select>
 				</div>
 				<div class="form-group">
