--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-		<title>Megabus Ticket Finder</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    </head>
-    <body>
 
-		<div class="container-fluid">
-			<h3>Megabus Ticket Finder</h3>
-			<div class="row">
-				<div class="alert alert-warning" role="alert">
-					<p>This is a really shitty hacked together version of what this will eventually be. But it does work</p>
-				</div>
-			</div>
-			<div>
-				<div class="form-group">
-				  <label for="departing">Departing</label>
-				  <select class="form-control" id="departing">
-					  <option value="128" selected>Pittsburgh</option>
-					  <option value="127">Philadelphia</option>
-					  <option value="137">PSU</option>
-					  <option value="123">New York</option>
-				  </select>
-				</div>
-				<div class="form-group">
-					<label for="returning">Returning </label>
-					<select class="form-control" id="returning">
-						<option value="128">Pittsburgh</option>
-						<option value="127" selected>Philadelphia</option>
-						<option value="137">PSU</option>
-					</select>
-				</div>
-				<div class="form-group">
-					<button class="btn btn-primary" onclick="getTickets()">Go</button>
-				</div>
+  <head>
+    <meta charset="utf-8">
+    <!-- Disable browser cache -->
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <title>Megabus Timer</title>
+    <link rel="stylesheet" href="vendor/semantic-ui/semantic.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="vendor/babel-core-5.8.25.js"></script>
+    <script src="vendor/react.js"></script>
+    <script src="vendor/react-dom.js"></script>
+    <script src="vendor/fetch.js"></script>
+  </head>
 
-			</div>
+  <body>
+    <div id="main" class="main ui">
+      <h1 class="ui dividing centered header">Tickets</h1>
+      <div id="content"></div>
+    </div>
+    <script type="text/babel" src="./client.js"></script>
+    <!-- <script type="text/babel" src="./helpers.js"></script> -->
+    <script type="text/babel" src="./app.js"></script>
+  </body>
 
-		</div>
-
-		<div id="results">
-		</div>
-    </body>
-	<script>
-	function getSelectValue(selectId) {
-		var e = document.getElementById(selectId);
-		return e.options[e.selectedIndex].value;
-	}
-
-	function getTickets() {
-		var departingId = getSelectValue("departing");
-		var returningId = getSelectValue("returning");
-		console.log(departingId, returningId);
-		var oReq = new XMLHttpRequest();
-		 oReq.onload = function () {
-		   console.log('Inside the onload event');
-		 };
-		 oReq.onload = function (e) {
-			document.getElementById("results").innerHTML = e.target.response;
-		};
-		 oReq.onreadystatechange = function () {
-			 document.getElementById("results").innerHTML = "Loading ..."
-		   console.log('Inside the onreadystatechange event with readyState:');
-		 };
-		 oReq.open('GET', "/api/tickets?originId=" + departingId + "&destinationId=" + returningId, true);
-		 oReq.send();
-	}
-	</script>
 </html>
