--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="main" class="main ui">
       <h1 class="ui dividing centered header">Tickets</h1>
-      <div id="content"></div>
+      <div id="content" class="ui container"></div>
     </div>
     <script type="text/babel" src="./client.js"></script>
     <!-- <script type="text/babel" src="./helpers.js"></script> -->
