--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
     <script src="vendor/react.js"></script>
     <script src="vendor/react-dom.js"></script>
     <script src="vendor/fetch.js"></script>
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
     <div id="main" class="main ui">
       <h1 class="ui dividing centered header">Tickets</h1>
+      <div class="disclaimer">*This front end was quickly hacked together for demonstration purposes*</div>
       <div id="content" class="ui container"></div>
     </div>
     <script type="text/babel" src="./client.js"></script>
