--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Megabus Timer</title>
+    <title>Megabus Ticket Finder</title>
     <link rel="stylesheet" href="vendor/semantic-ui/semantic.min.css" />
     <script src="vendor/babel-core-5.8.25.js"></script>
     <script src="vendor/react.js"></script>
